docs/user/1.5/_sources/cli/apptainer_pull.rst.txt
.. _apptainer_pull:

apptainer pull
--------------

Pull an image from a URI

Synopsis
~~~~~~~~



  The 'pull' command allows you to download or build a container from a given
  URI. Supported URIs include:

  library: Pull an image from the currently configured library
      library://user/collection/container[:tag]

  docker: Pull a Docker/OCI image from Docker Hub, or another OCI registry.
      docker://user/image:tag
    
  shub: Pull an image from Singularity Hub
      shub://user/image:tag

  oras: Pull a SIF image from an OCI registry that supports ORAS.
      oras://registry/namespace/image:tag

  ipfs: Pull a SIF image from an IPFS cluster, using a HTTP gateway.
      ipfs://cid

  http, https: Pull an image using the http(s?) protocol
      https://example.com/alpine.sif

::

  apptainer pull [pull options...] [output file] <URI>

Examples
~~~~~~~~

::


    From a library
    $ apptainer pull alpine.sif library://alpine:latest

    From Docker
    $ apptainer pull tensorflow.sif docker://tensorflow/tensorflow:latest
    $ apptainer pull --arch arm --arch-variant 6 alpine.sif docker://alpine:latest

    From Shub
    $ apptainer pull apptainer-images.sif shub://vsoch/apptainer-images

    From supporting OCI registry (e.g. Azure Container Registry)
    $ apptainer pull image.sif oras://<username>.azurecr.io/namespace/image:tag

    From available IPFS cluster (using a local HTTP IPFS gateway)
    $ apptainer pull lolcow.sif ipfs://bafybeice667c6gxovimsb6gnk6vex7vhzluhkl5hjv4ac4lhilxn52c43m

Options
~~~~~~~

::

      --arch string           architecture to pull from library (default "amd64")
      --arch-variant string   architecture variant to pull from library
      --authfile string       Docker-style authentication file to use for writing/reading OCI registry credentials
      --dir string            download images to the specific directory
      --disable-cache         do not use or create cached images/blobs
      --docker-host string    specify a custom Docker daemon host
      --docker-login          login to a Docker Repository interactively
  -F, --force                 overwrite an image file if it exists
  -h, --help                  help for pull
      --library string        download images from the provided library
      --no-cleanup            do NOT clean up bundle after failed build, can be helpful for debugging
      --no-https              use http instead of https for docker:// oras:// and library://<hostname>/... URIs
      --reproducible          creates a reproducible build by using the creation date of the source image
      --sandbox               pull image as sandbox format (chroot directory structure)

SEE ALSO
~~~~~~~~

* :ref:`apptainer <apptainer>` 	 - 
Linux container platform optimized for High Performance Computing (HPC) and
Enterprise Performance Computing (EPC)

*Auto generated by spf13/cobra on 22-Sep-2026*
